# slack-bug-triage

./: .env.example  .gitignore  README.md  pyproject.toml
app/: bug_extractor.py  claude_client.py  config.py  duplicate_detector.py  github_client.py  main.py  models.py  slack_client.py  validator.py
tests/: conftest.py  test_github_client.py  test_main.py  test_signature.py  test_validator.py
